Added a fix for newer Java versions to the start script.